ping_pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
  namespace: log-ping-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      volumes:
      - name: shared-logs
        persistentVolumeClaim:
          claimName: log-claim
      containers:
        - name: ping-pong
          imagePullPolicy: Never # local image
          image: ping-pong
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
            # volumeMounts:
            # - name: shared-logs
            #   mountPath: /usr/src/app/shared


# make sure to build and load the image before (see readme)
# apply changes: kubectl apply -f manifests/deployment.yaml
