ping_pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  selector:
    app: ping-pong
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
