ping_pong/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ping-pong
  namespace: exercises
spec:
  hosts:
    - "*"
  gateways:
    - ping-pong-gateway
  http:
    - match:
        - uri:
            prefix: "/pingpong"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: ping-pong-svc
            port:
              number: 80
